Change CSS for title to avoid scrollbars
The margin on the title was causing vertical scrollbar. This lead to
resize events when switching tabs in Firefox, depending on the content
of the other tab (seems like a bug to me). Use padding instead of
vertical margin for a bit of space around the title and leave centering
to text-align.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -13,13 +13,12 @@ body {
 }
 
 #title {
-  width: 900px;
   min-height: 18px;
-  margin: 5px auto 2px;
   text-align: center;
   font-size: 16px;
   color: #e2e2e2;
   font-weight: 400;
+  padding: 5px;
 }
 
 #title:hover {
